3)  Fixed issue with the ModPrefs not calling the OnModSettingsApplied method of Mods.
4)  Replaced old ModPrefs debug log message left in from my VRChat mod.
5)  Fixed issue with Audica crashing when trying to use MelonLoader.
6)  Added Unity 2018.4.6f1 Dependencies.
7)  Fixed bug with Launch Options.
8)  Fixed Pathing issue that caused games like Boneworks to crash.
9)  Fixed issue where Environment.CurrentDirectory wasn't being set properly.
10)  Clean-up and Additions made to NET_SDK.  (Thanks Sc4ad :D)
11)  Added SteamVR and OculusVR Dependency DLLs to MelonLoader/Managed.
12)  Added TestMod to Project Files.
13)  Added Attribute StackTrace system to Logger.  (As requested by Camobiwon :3)
14)  Replaced Spaces in Names for the Attribute StackTrace System with Underscores.
15)  Fixed the bug that caused the Logger from MelonLoader.ModHandler to not properly output when using the Debug Console.
16)  Added SystemTypeToIL2CPPClass method to NET_SDK.IL2CPP.
17)  Fixed Compile Version conflict with the 2 Consoles.
MelonLoader [DEBUG] & MelonLoader.ModHandler [RELEASE]  =  Debug Console
MelonLoader [RELEASE] & MelonLoader.ModHandler [DEBUG]  =  Normal Console
MelonLoader [DEBUG] & MelonLoader.ModHandler [DEBUG]  =  Debug Console
MelonLoader [RELEASE] & MelonLoader.ModHandler [RELEASE]  =  Left up to the Launch Options

---

Known Issues:

1)  OnApplicationQuit for Mods doesn't get called. 
2)  Game.DontDestroyOnLoad causes crash.
3)  Certain methods that use System.Type cause crash. (example: GameObject.AddComponent)

---

Work-in-Progress / To-Do List:

1)  Fix the above issues.
2)  0Harmony integration and support.
3)  An assembly generator for game specific Assembly DLL files.
4)  A Dependency Download system to automate installation of MelonLoader.
5)  A component based system for Mod loading and running.
6)  Support for games that use Mono instead of IL2CPP.
7)  Support for Oculus Quest, Linux, and Mac.